# JANA-Paper

./: .gitignore  LICENSE  README.md  environment.yaml  requirements.txt  setup.cfg
experiments/bayesian_denoising/: README.txt  joint_training.ipynb  posterior_amortizer.ipynb
experiments/benchmarks/: README.txt  benchmark_1.ipynb  benchmark_10.ipynb  benchmark_10_lotka_volterra.ipynb  benchmark_1_gaussian_linear.ipynb  benchmark_2.ipynb  benchmark_2_gaussian_linear_uniform.ipynb  benchmark_3.ipynb  benchmark_3_slcp.ipynb  benchmark_4.ipynb  benchmark_4_slcp_distractors.ipynb  benchmark_5.ipynb  benchmark_5_bernoulli_glm.ipynb  benchmark_6.ipynb  benchmark_6_bernoulli_glm_raw.ipynb  benchmark_7.ipynb  benchmark_7_gaussian_mixture.ipynb  benchmark_8.ipynb  benchmark_8_two_moons.ipynb  benchmark_9.ipynb  benchmark_9_sir.ipynb  custom_plots.py
experiments/diffusion_model/: 01_joint.ipynb  02_likelihood_mcmc.ipynb  README.md  analytic_likelihood.R  bridge_sampling.R  plotting_functions.py  presimulation_likelihood.R  presimulation_posterior.R  pymc_sample.py  stan_sample.py  train_likelihood.py  train_posterior.py  utility_functions.py
experiments/epidemiology/: README.txt  covid19_joint_memory.ipynb  covid19_joint_memory_MMD.ipynb  legend_plot.ipynb
experiments/two_moons/: README.txt  config.py  evaluate_and_plot.ipynb  jana.py  npe_c.py  requirements_bayesflow.txt  requirements_eval.txt  requirements_sbi.txt  snl.py  snpe_c.py  snpla.py  snre_b.py  snvi.py  two_moons_lueckmann_numpy.py  two_moons_wiqvist_numpy.py  two_moons_wiqvist_torch.py
(+117 files in other folders)
